[tool.poetry]
name = "price-track"
version = "0.1.0"
description = ""
authors = ["Jahirul Islam <jai@fiftytwo.com>"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.25.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
